infrastructure/gatekeeper/tests/host-filesystem/fail.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: my-app
spec:
  containers:
    - name: app
      image: nginx:1.27
      volumeMounts:
        - name: host-vol
          mountPath: /host
  volumes:
    - name: host-vol
      hostPath:
        path: /etc
